# litex

./: .gitignore  Containerfile  Makefile  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js  vite.config.js
app/: asgi.py
app/components/: core.py
app/config/: app.py  base.py
app/controllers/web/: base.py
app/database/: models.py
app/database/migrations/: env.py
app/server/: core.py  plugins.py
app/templates/: _.html.j2  index.html.j2
app/tools/: xrequest.py
static/: main.js
